# rllm

./: .gitmodules  pyproject.toml  setup.sh  test_script.py  train.sh  train_local.sh  train_lora.sh
examples/swe/: prepare_swe_data.py  train_deepswe_06b_1a100.sh  train_deepswe_4b.sh  train_deepswe_8b_8h100.sh  train_deepswe_custom.sh
rllm/: agent.py  agent_execution_engine.py  agent_ppo_trainer.py  env.py  router.py  train_agent_ppo.py  utils.py
rllm/agents/: swe_agent.py  system_prompts.py
rllm/engine/: agent_execution_engine.py
rllm/environments/swe/: swe.py
rllm/trainer/: agent_trainer.py
rllm/trainer/config/: ppo_trainer.yaml
rllm/trainer/verl/: agent_ppo_trainer.py  train_agent_ppo.py  train_agent_ppo_pipeline.py
