[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rllm"
version = "0.1.0"
description = "Reinforcement Learning for Language Agents"
authors = [
    {name = "rLLM Team"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    # Core ML/AI packages
    "transformers",
    "accelerate",
    "flash-attn>=2.8.0.post2",
    "sentence-transformers",
    "torchmetrics",

    # Training and inference
    "deepspeed",
    "vllm>=0.8.3",
    "sgl-kernel>=0.2.0",
    "sglang>=0.4.8.post1",
    "sglang-router",
    "peft",
    "torchao",

    # Data processing
    "datasets",
    "polars",
    "dm-tree",

    # Cloud and infrastructure
    "google-cloud-aiplatform",
    "vertexai",
    "kubernetes",
    "ray",

    # Web and automation
    "gradio",
    "selenium",
    "browsergym",
    "firecrawl",

    # Math and science
    "latex2sympy2",
    "pylatexenc",
    "nltk",
    "scipy",
    "scikit-learn",

    # Code evaluation
    "swebench",
    "e2b_code_interpreter",

    # Utilities
    "fire",
    "gdown",
    "tabulate",
    "sortedcontainers",
    "PyMuPDF",
    "together",
    "wandb",
    "pybind11",
    "gym",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["rllm", "rllm.*"]


exclude = [
    "verl/.*",
]